# applied-ai-take-home

./: .env.example  .gitignore  DESIGN.md  README.md  manifest.json  pyproject.toml
applied-ai-take-home-database/: README.md
evals/: cases.py  eval.py
scripts/: ask.py  eval.py  run_slack.py  trace.py
src/: agent.py  db.py  slack_app.py  tools.py
src/cli/: ask.py  slack.py  trace.py
src/slack/: __init__.py  blocks.py  format.py  runner.py  status.py
tests/: test_agent.py  test_tools.py
