[project]
name = "slack-qa-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=1.1.8,<2.0",
    "langchain-openai>=1.1,<2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
